[package]
name = "fastmurmur3"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Fast murmur3 hash, with the benchmarks to prove it."
license = "MIT"
repository = "https://github.com/kurtbuilds/fastmurmur3"

# categories are https://crates.io/category_slugs
categories = [
    "cryptography",
]

keywords = [
    "hash",
    "murmur3",
    "murmur",
    "hashing",
]

[features]
"bench"= []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "bench"
path = "bench/bench.rs"
harness = false

[dependencies]
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
twox-hash = "1.6.1"

[dev-dependencies]
criterion = "0.3.5"
murmur3 = "0.5.1"
sha-1 = "0.10.0"
rand = "0.8.4"
fasthash = "0.4.0"

[dependencies.fallthrough]
git = "https://github.com/pythonesque/fallthrough"
version = "0.0.1"
