[package]
name = "fastmurmur3"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
version = "0.1.2"
edition = "2021"
description = "Fast non-cryptographic hash, with the benchmarks to prove it."
license = "MIT"
repository = "https://github.com/kurtbuilds/fastmurmur3"

# categories are https://crates.io/category_slugs
categories = [
    "cryptography",
]

keywords = [
    "hash",
    "murmur3",
    "murmur",
    "hashing",
]

[features]
# Link the C library for murmur3. You likely never need this feature.
# It exists purely for benchmarking and testing purposes.
"murmur3c"= []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "bench"
path = "bench/bench.rs"
harness = false

[dependencies]

[dev-dependencies]
criterion = "0.3.5"
murmur3 = "0.5.1"
sha-1 = "0.10.0"
rand = "0.8.4"
fasthash = "0.4.0"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
twox-hash = "1.6.1"
rustc-hash = "1.1.0"
