[package]
name = "fastmurmur3"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
version = "0.1.2"
edition = "2021"
description = "Fast non-cryptographic hash, with the benchmarks to prove it."
license = "MIT"
repository = "https://github.com/kurtbuilds/fastmurmur3"

# categories are https://crates.io/category_slugs
categories = [
    "cryptography",
]

keywords = [
    "hash",
    "murmur3",
    "murmur",
    "hashing",
]

[features]
# Link the C libraries for murmur3. These features make no difference for functionality and they should be disabled.
# They exist purely for benchmarking and testing purposes.
"murmur3c" = []
"fasthash" = ["dep:fasthash"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "bench"
path = "bench/bench.rs"
harness = false

[dependencies]
fasthash = { version = "0.4.0", optional = true }

[dev-dependencies]
criterion = "0.3.5"
murmur3 = "0.5.1"
sha-1 = "0.10.0"
rand = "0.8.4"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
twox-hash = "1.6.1"
rustc-hash = "1.1.0"
highway = "0.8.1"
fnv = "1.0.7"
crc = "3.0.1"
